MFB: Make the whole folder row clickable, and also fix a weird overflow artifact that I've seen since FF3.

--- a/imp/themes/screen.css
+++ b/imp/themes/screen.css
@@ -1,4 +1,7 @@
 /* Message list table styles. */
+.searchfolder a.smallheader {
+    display: block;
+}
 .messageList {
     table-layout: fixed;
     width: 100%;
